--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,12 +1,22 @@
+body{
+    background-color: #cbdaff;
+}
 html{
     width: 80%;
     margin-left:auto ;
     margin-right: auto;
+    margin-top: 1rem;
 }
 h1{
     font-size: 3rem;
     margin-bottom: 2rem;
 }
-ul{
-    
+a, a::before{
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: black;
+}
+a::before{
+    content: "- ";
+
 }
