figured the nav out

--- a/Denoo Denoo advies kantoor/assets/css/screen.css
+++ b/Denoo Denoo advies kantoor/assets/css/screen.css
@@ -2,8 +2,8 @@ nav{
     background-color: dodgerblue;
 }
 
-nav > ul > li{
-    float: left;
+nav li{
+    display: inline-block;
     width: 7%;
     height: 100%;
 }
