--- a/Denoo Denoo advies kantoor/assets/css/screen.css
+++ b/Denoo Denoo advies kantoor/assets/css/screen.css
@@ -1,10 +1,11 @@
 nav{
     background-color: dodgerblue;
+    height: 2rem;
 }
 
-nav li{
-    display: inline-block;
-    width: 7%;
+nav > ul > li{
+    float: left;
+    margin-left: 8%;
     height: 100%;
 }
 
