link nie meer onderlijn

--- a/Denoo Denoo advies kantoor/assets/css/screen.css
+++ b/Denoo Denoo advies kantoor/assets/css/screen.css
@@ -30,6 +30,10 @@ ul a{
     color: white !important;
 }
 
+a:focus, a:hover {
+    text-decoration: none;
+}
+
 .dropdown:hover .dropdown-menu {
     display: block;
 }
