--- a/Denoo Denoo advies kantoor/assets/css/screen.css
+++ b/Denoo Denoo advies kantoor/assets/css/screen.css
@@ -11,11 +11,11 @@ ul{
 
 nav > ul > li{
     float: left;
-    padding-left: 2%;
-    padding-right: 2%;
+    width: 14%;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     height: 100%;
+    text-align: center;
 }
 
 li:hover{
@@ -28,6 +28,9 @@ a{
 
 ul a{
     color: white !important;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
 }
 
 a:focus, a:hover {
@@ -53,4 +56,15 @@ a:focus, a:hover {
     top: 0;
     left: 100%;
     margin-top: -1px;
+}
+
+footer{
+    background-color: lightskyblue;
+    position:absolute;
+    bottom:0;
+    width:100%;
+}
+
+hide{
+    display: none;
 }
