--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,28 +1,41 @@
 body{
     text-align: center;
+    font-family: "Arial", sans-serif;
 }
 
 ul{
     display: flex;
-    /*justify-content: center;*/
-    height: 3rem;
+    height: 4rem;
+    font-size: 1.2rem;
+    background-color: orange;
 }
 
 li{
     margin: auto;
+    height: 100%;
+    line-height: 3;
 }
 
 li:nth-child(2){
-    margin-left: 3%;
-    margin-right: 3%;
+    margin-left: 1.5%;
+    margin-right: 1.5%;
+}
+
+li:nth-child(2):hover{
+    background-color: transparent;
 }
 
 li:first-child{
-    margin-right: 0;
+    margin-right: 1.5%;
 }
 
 li:last-child{
-    margin-left: 0;
+    margin-left: 1.5%;
+}
+
+a{
+    text-decoration: none;
+    color: white;
 }
 
 section, article{
